# inventory-tracker

./: .gitignore  Dockerfile  REAMD.md  docker-compose.yml  pyproject.toml
.project.env/: .env.template  postgres.env.template
tracker/tracker/: settings.py  urls.py
