[tool.poetry]
name = "tracker"
version = "0.1.0"
description = "web application for tracking inventory"
authors = ["thisisyoojin <thisisyoojin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
